# edge-forecast

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: multivariate.csv  sample.csv  with_anomaly.csv
lean/: EdgeForecast.lean  RUST_LEAN_ALIGNMENT.md
src/: core.rs  lib.rs  model_io.rs
src/data/: mod.rs
src/metrics/: mod.rs
src/models/: ar.rs  mod.rs  reservoir.rs  spin.rs
src/online/: mod.rs
