[package]
name = "edge-forecast"
version = "0.1.0"
edition = "2024"
description = "Compact Rust forecasting engine for edge and streaming time-series"
license = "MIT"
repository = "https://github.com/yablokolabs/edge-forecast"
readme = "README.md"
keywords = ["forecasting", "timeseries", "edge", "reservoir", "streaming"]
categories = ["algorithms", "science"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiny_http = "0.12"

[dev-dependencies]
approx = "0.5"
