[package]
name = "edge-forecast"
version = "0.1.0"
edition = "2024"
description = "Compact Rust forecasting engine for edge and streaming time-series"
license = "MIT"
repository = "https://github.com/yablokolabs/edge-forecast"
readme = "README.md"
keywords = ["forecasting", "timeseries", "edge", "reservoir", "streaming"]
categories = ["algorithms", "science"]

[dependencies]
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Binary-only dependencies, gated behind the "cli" feature
clap = { version = "4", features = ["derive"], optional = true }
tiny_http = { version = "0.12", optional = true }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tiny_http"]

[[bin]]
name = "edge-forecast"
required-features = ["cli"]

[dev-dependencies]
approx = "0.5"
